--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
-canvas {
-    border: 1px solid black;
+body {
+    background-image: url("../img/background.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
+
+.container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+canvas {
+    border: 5px solid black;
+}
+
+/* button{
+   /*  background-color: rgba(201, 196, 196, 0.80); */
+    /* background: url("/img/startbutton.png");
+    width: 100px;
+    height: 80px;
+    border-radius: 8px; */
+
+/* } */ 
