--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 canvas {
     border: 5px solid black;
-    background-color: black;
+    background-image: url("../img/instructions.png");
 }
 
 .buttons {
